# real-time-logistics-strategy-engine

./: .dockerignore  .editorconfig  .env.example  .env.shared  .flake8  .gitignore  .markdownlint-cli2.jsonc  .yamllint  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GOVERNANCE.md  README.md  dagster_definitions.py  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  prod-state-cleanup.yml
.streamlit/: secrets.toml.example
benchmark/sql/: delivery_cost_calc_bench.sql
data/: .gitignore  inventory.csv  orders.csv  products.csv
data/02_intermediate/estat/: b01_01_lite.csv
data/03_seed/: logistics_centers.csv  shipping_costs.csv
ddl/: create_inventory.sql  create_logistics_centers.sql  create_orders.sql  create_products.sql
docs/: ARCHITECTURE.md  DATA_CONTRACT.md  DECISIONS.md  DEPLOYMENT.md  GOVERNANCE.md  RUNBOOK.md  TESTING.md
docs/adr/: ADR-0001-hcp-terraform-remote-backend.md  ADR-0002-prod-apply-via-ci-approval-gate.md  ADR-0003-prevent-destroy-false-bootstrap-phase.md  ADR-0004-env-switch-and-naming-governance.md  ADR-0005-snowflake-data-platform-adoption.md  ADR-0006-bronze-silver-gold-layering.md  ADR-0007-snowflake-governance-baseline.md  ADR-0008-network-policy-and-retention-baseline.md
enterprise_data_pipeline/: README.md  dbt_project.yml  profiles.yml
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
src/: README.md  connection_test.py
src/api/: dashboard_service.py  main.py  schemas.py
src/infrastructure/: snowflake_loader.py
src/scripts/: deploy_udf.py  generate_large_data.py  measure_performance.py
src/simulation/: __init__.py  assignment_engine.cpp  constants.json  domain.py  native_engine.py
src/streamlit/: app.py  scenario_editor.py
src/transform/: .user.yml  README.md  dbt_project.yml  profiles.yml
src/udf/: delivery_cost_calculator.py
src/utils/: geospatial.py
terraform/: .terraform.lock.hcl  README.md  backend.dev.hcl  backend.dev.hcl.example  backend.hcl.example  backend.prod.hcl  backend.prod.hcl.example  common.auto.tfvars  main.tf  providers.tf  tf  variables.tf
terraform/bootstrap/: README.md  sync_bootstrap_sql_from_tfvars.sh
tests/: sql_verification.sql  test_basic.py  test_simulation_domain.py  test_simulation_native_engine.py  test_snowflake_loader.py  test_streamlit_scenario_editor.py  test_udf.py
(+45 files in other folders)
